# rda-apps-clients

./: .gitignore  Pipfile  check_grib_file.py  check_netcdf_file.py  download_data.py  download_data_async.py  download_data_v2.py  download_data_v3.py  pyproject.toml  rdamspw.txt  settings.py
config/: request_configs.yaml
notebooks/: check_grib.ipynb  explore_grib_data.ipynb
src/: config.py  settings.py
src/python/: rdams_client.py
src/utils/: entities.py  logger.py
test/: explore_grib_data.ipynb  test_aws.py  test_data_download.py  test_legacy_download.py
tools/: check_grib_file.py
utils/: logger.py
