[tool.poetry]
name = "rda-apps-clients"
version = "0.1.0"
description = "Project to download openly available historical GFS weather data."
authors = ["John-Anders Stende <john@montel.no>"]
readme = "README.md"
packages = [{include = "rda_apps_clients"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pygrib = "^2.1.4"
xarray = "^2023.9.0"
netcdf4 = "^1.6.4"
pendulum = "^2.1.2"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.8.2"
natsort = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
